--- a/HongMomo-v3-mid.html
+++ b/HongMomo-v3-mid.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>叩叩模拟器 - 哄魔魔开心（困难模式）</title>
+    <title>叩叩模拟器 - 哄魔开心（困难模式）</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
