--- a/HongMomo-v3-mid.html
+++ b/HongMomo-v3-mid.html
@@ -64,7 +64,7 @@
         <!-- 顶部标题 -->
         <div class="text-center py-4 border-b border-gray-200">
             <h1 class="text-xl font-bold text-red-800">叩叩模拟器 - 中级模式</h1>
-            <p class="text-gray-500 text-sm">哄魔魔开心（魔王级）</p>
+            <p class="text-gray-500 text-sm">哄开心（魔王级）</p>
         </div>
         
         <!-- 随机事件通知 -->
