--- a/HongMomo-v3-mid.html
+++ b/HongMomo-v3-mid.html
@@ -79,19 +79,17 @@
         <div id="game-container">
             <!-- 开始游戏界面 -->
             <div id="start-screen" class="p-4">
-                <h2 class="text-lg font-bold mb-4 text-red-800">叩叩模拟器：哄魔魔开心（中级模式）</h2>
+                <h2 class="text-lg font-bold mb-4 text-red-800">师姐心情模拟器</h2>
                 
-                <p class="mb-3">2025年3月7日，作为魔魔的男朋友叩叩，你说了一些深深伤害魔魔的话，导致她非常生气。</p>
-                <p class="mb-3">这次和好对你们的关系至关重要，然而魔魔情绪已经降到历史最低点。</p>
-                <p class="mb-3 font-bold text-red-700">警告：中级模式下，魔魔的心情持续下降，你必须更加迅速且高效地安抚她！</p>
+                <p class="mb-3 font-bold text-red-700">警告：师姐的心情持续下降，你必须迅速答题！</p>
                 
                 <div class="my-4 bg-gray-50 p-3 rounded">
-                    <h3 class="font-bold mb-2">游戏规则变更：</h3>
+                    <h3 class="font-bold mb-2">游戏规则：</h3>
                     <ul class="mb-3 pl-4 space-y-1 text-sm">
-                        <li>• 初始数值更低（30）</li>
-                        <li>• 胜利条件更高（心情和喜欢度需达95+）</li>
-                        <li>• 回合数减少（只有10轮）</li>
-                        <li>• 魔魔心情每轮自动衰减</li>
+                        <li>• 初始数值为30</li>
+                        <li>• 胜利条件：心情和信任值需达95+</li>
+                        <li>• 回合数只有10轮</li>
+                        <li>• 师姐心情每轮自动衰减</li>
                         <li>• 随机事件会突然降低进度</li>
                         <li>• 同类选项重复使用效果大幅下降</li>
                         <li>• 时间压力：每轮选择限时30秒</li>
