--- a/ver1.html
+++ b/ver1.html
@@ -356,13 +356,13 @@
         const randomEventsData = [
             {
                 title: "突发问题",
-                desc: "师姐突然想起一个难题要考你！",
-                scoreEffect: -15,
+                desc: "你忘记回收师姐断货了订不到的珍贵119一抗",
+                scoreEffect: -20,
                 correctEffect: -10
             },
             {
                 title: "实验室紧急情况",
-                desc: "实验室的离心机出了故障，分散了你的注意力！",
+                desc: "你做大提质粒时忘了检查PW有没有加无水乙醇了",
                 scoreEffect: -10,
                 correctEffect: -15
             },
@@ -380,7 +380,7 @@
             },
             {
                 title: "知识漏洞",
-                desc: "你发现有一章内容完全没复习...",
+                desc: "你发现忘记复习师姐交代的实验了...",
                 scoreEffect: -5,
                 correctEffect: -20
             }
