--- a/ver2.html
+++ b/ver2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>师姐心情模拟器 - 中级模式</title>
+    <title>师姐心情模拟器 </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -94,8 +94,8 @@
     <div class="max-w-md mx-auto bg-white shadow-sm min-h-screen relative">
         <!-- 顶部标题 -->
         <div class="text-center py-4 border-b border-gray-200">
-            <h1 class="text-xl font-bold text-red-800">师姐心情模拟器 - 中级模式</h1>
-            <p class="text-gray-500 text-sm">哄开心（魔王级）</p>
+            <h1 class="text-xl font-bold text-red-800">师姐心情模拟器</h1>
+            <p class="text-gray-500 text-sm">zkx视角模拟器</p>
         </div>
 
         <!-- 随机事件通知 -->
@@ -112,13 +112,13 @@
             <div id="start-screen" class="p-4">
                 <h2 class="text-lg font-bold mb-4 text-red-800">师姐心情模拟器</h2>
 
-                <p class="mb-3 font-bold text-red-700">警告：师姐的心情持续下降，你必须迅速答题！</p>
+                <p class="mb-3 font-bold text-red-700">警告：你回答问题所用时间会影响到师姐耐心，因此必须迅速答题！</p>
 
                 <div class="my-4 bg-gray-50 p-3 rounded">
                     <h3 class="font-bold mb-2">游戏规则：</h3>
                     <ul class="mb-3 pl-4 space-y-1 text-sm">
                         <li>• 初始数值为30</li>
-                        <li>• 胜利条件：心情和信任值需达95+</li>
+                        <li>• 胜利条件：师姐心情和你的知识水平需达95+</li>
                         <li>• 回合数只有10轮</li>
                         <li>• 师姐心情每轮自动衰减</li>
                         <li>• 随机事件会突然降低进度</li>
