--- a/ver2.html
+++ b/ver2.html
@@ -403,22 +403,22 @@
                 type: questionTypes.COIP
             },
             {
-                question: "Co-IP实验中，洗涤步骤的主要目的是什么？",
+                question: "GloSensor报告系统需要下列哪一项才能启动荧光信号？",
                 answers: [
-                    { text: "去除非特异性结合的蛋白质", isCorrect: true },
-                    { text: "活化抗体结合位点", isCorrect: false },
-                    { text: "打断蛋白质之间的相互作用", isCorrect: false },
-                    { text: "提高蛋白质的溶解度", isCorrect: false }
+                    { text: "Luciferin底物", isCorrect: true },
+                    { text: "Mg离子", isCorrect: false },
+                    { text: "Ca离子", isCorrect: false },
+                    { text: "GTP", isCorrect: false }
                 ],
                 type: questionTypes.COIP
             },
             {
-                question: "在Co-IP实验中，什么因素可能导致假阴性结果？",
+                question: "以下哪个不是glosensor和nanobit的区别？",
                 answers: [
-                    { text: "相互作用蛋白的表达量太低", isCorrect: true },
-                    { text: "使用了过多的抗体", isCorrect: false },
-                    { text: "缓冲液pH值过高", isCorrect: false },
-                    { text: "样品处理时间过长", isCorrect: false }
+                    { text: "荧光素酶种类不同", isCorrect: true },
+                    { text: "底物种类不同", isCorrect: false },
+                    { text: "孵育条件和时间不同", isCorrect: false },
+                    { text: "底物加入的量不同", isCorrect: false }
                 ],
                 type: questionTypes.COIP
             },
