--- a/ver4.html
+++ b/ver4.html
@@ -331,13 +331,13 @@
         // 师姐的负面和正面评语
         const negativeFeedback = [
             "我平时是这么说的吗",
-            "这么简单的问题都答错，再认真想想！",
-            "不对，这是基础知识，要复习一下了。",
+            "细心一点！",
+            "这是基础，要复习一下了",
             "是这样吗",
-            "这个答案完全不对，你再想想？",
+            "......",
             "你再想想？",
             "错了！",
-            "这个都不知道"
+            "........"
         ];
 
         const positiveFeedback = [
