--- a/ver4.html
+++ b/ver4.html
@@ -332,11 +332,11 @@
         const negativeFeedback = [
             "我平时是这么说的吗",
             "细心一点！",
-            "这是基础，要复习一下了",
-            "是这样吗",
+            "这是基础",
+            "笑了",
             "......",
             "你再想想？",
-            "错了！",
+            "是这样吗",
             "........"
         ];
 
