--- a/ver4.html
+++ b/ver4.html
@@ -361,7 +361,7 @@
                 correctEffect: -10
             },
             {
-                title: "实验室紧急情况",
+                title: "紧急情况",
                 desc: "你忘记检查大提质粒的PW有没有加无水乙醇了",
                 scoreEffect: -10,
                 correctEffect: -15
@@ -373,7 +373,7 @@
                 correctEffect: -5
             },
             {
-                title: "疲劳影响",
+                title: "被发现了",
                 desc: "师姐发现你组会在摸鱼，没认真听",
                 scoreEffect: -15,
                 correctEffect: -15
